--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Pixelify Sans', sans-serif;
     box-sizing: border-box;
 }
 
 body {
-    background: #454545;
+    background: #89E013;
     color: #fff;
 }
 
